--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "react_native_demo",
-  "displayName": "react_native_demo"
+  "name": "ReactNativeDemo",
+  "displayName": "ReactNativeDemo"
 }
