--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_native_demo",
+  "name": "ReactNativeDemo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,10 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/hooks": "^3.0.0",
     "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-linear-gradient": "^2.6.2"
+    "react-native": "0.71.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,7 +25,7 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.8",
+    "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
